--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "openai": "^5.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.5"
   },
