wallet connection beta version created

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/ethereum-provider": "^2.21.8",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "framer-motion": "^12.15.0",
