wallet connection will be done

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.6",
     "@walletconnect/ethereum-provider": "^2.21.8",
+    "@web3modal/wagmi": "^5.1.11",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "framer-motion": "^12.15.0",
@@ -20,6 +22,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.0",
+    "viem": "^2.36.0",
+    "wagmi": "^2.16.9",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
